*REFACTORING* token
struct CommentWithLikes rename to CommentWithLike
struct PostWithLikes rename to PostWithLike
